package ar.edu.utn.frba.dds.model.entities.roles;

public enum Rol {
  ADMINISTRADOR,
  CONTRIBUYENTE
}
